==> captain58/embed_platform/drivers/GD32F30x/src/dev_gpi.c <==
#define EXT_GPI
#define EXT_DEV_GPI
#include "WOSsys.h"
#include "sys.h"
#include "hal.h"
#include "bsp.h"
#include "tasks.h"
        #define LGPI_PORT_NUM  1
        #define LGPI_LAST  1
        #define LGPI_GATE  1
        #define FGPI_PORT_NUM  1
        #define FGPI_GATE   1
        #define ID_SWTIMER_FGPI    0xff

void SYS_LGPI_Scan(void)
{
    uint8  uc_i;
    GPI_PORTS* gpi;
    COMPORT* cp;
    
    for(uc_i = 0; uc_i < LGPI_PORT_NUM; uc_i++)
    {
        gpi = (GPI_PORTS*)gs_LGPIPort + uc_i;
//	        cp = (COMPORT*)gpi->cp;
        
        _IF_TRUE_DO(gpi == __NULL, continue);
        
        if(gpi->filter)                             //(含去抖功能及按键保持判断)(典型应用:按键)
        {
            if(gsp_GpioStt->gpistt & (0x01 << uc_i))//当前高电平.判断下降事件
            {
                if(!HAL_GPIO_GetPinState(gpi->port, gpi->port->pinnum))
                {
                    gsp_GpioStt->cnt[uc_i]++;       //计数器累加
                }
                else                                //清计数器
                {
                    gsp_GpioStt->cnt[uc_i] = 0;
                }
                gsp_GpioStt->lastcnt[uc_i] = 0;     //高电平状态下按键保持计数器清零
            }
            else                                    //当前低电平
            {
                if(HAL_GPIO_GetPinState(gpi->port, gpi->port->pinnum))//高
                {
                    gsp_GpioStt->cnt[uc_i]++;       //计数器累加
                }
                else                                //低电平
                {
                    gsp_GpioStt->cnt[uc_i] = 0;     //计数器清零
                    
                    if(gsp_GpioStt->lastcnt[uc_i] <= LGPI_LAST)
                        gsp_GpioStt->lastcnt[uc_i]++;   //低电平状态下按键保持计数器累加
                }
            }
                                                    //按键事件
            if(gsp_GpioStt->cnt[uc_i] >= LGPI_GATE)
            {                                       //下降沿事件
                gsp_GpioStt->keyfevt |= gsp_GpioStt->gpistt & (0x01 << uc_i);
                gsp_GpioStt->gpistt ^= (0x01 << uc_i);//状态取反
                gsp_GpioStt->keyrevt |= gsp_GpioStt->gpistt & (0x01 << uc_i);//上升沿事件
                gsp_GpioStt->cnt[uc_i] = 0;         //计数器清零
            }
                                                    //按键保持事件判断
            if(gsp_GpioStt->lastcnt[uc_i] == LGPI_LAST)
            {
//	                gsp_GpioStt->lastcnt[uc_i] = 0;//LGPI_LAST - LGPI_GATE;
                gsp_GpioStt->keylevt |= (0x01 << uc_i);
            }
        }
        else                                        //普通GPI输入端口扫描(无去抖功能)
        {
            if(HAL_GPIO_GetPinState(gpi->port, gpi->port->pinnum))//高
            {
                gsp_GpioStt->gpistt |= (0x01 << uc_i);
            }
            else                                    //低
            {
                gsp_GpioStt->gpistt &= ~(0x01 << uc_i);
            }
        }
    }
    
//	    return true;
}

bool SYS_FGPI_Scan(void* pdata)
{
    uint8 uc_i;
    GPI_PORTS* gpi;
//    COMPORT* cp;
    
    for(uc_i = 0; uc_i < FGPI_PORT_NUM; uc_i++)
    {
        gpi = (GPI_PORTS*)(gs_FGPIPort + uc_i);
//        cp = (COMPORT*)gpi->cp;
        
        _IF_TRUE_DO(gpi == __NULL, continue);

        
        if(gpi->filter)
        {
                                                    //当前高电平.判断下降事件
            if(gsp_GpioStt->fgpistt & (0x01 << uc_i))
            {
                if(!HAL_GPIO_GetPinState(&gpi->cp->gpio[gpi->cp->pingrp], gpi->cp->pinnum))//低
                {
                    gsp_GpioStt->fcnt[uc_i]++;      //计数器累加
                }
                else                                //清计数器
                {
                    gsp_GpioStt->fcnt[uc_i] = 0;
                }
            }
            else                                    //当前低电平
            {
                if(HAL_GPIO_GetPinState(&gpi->cp->gpio[gpi->cp->pingrp], gpi->cp->pinnum))//高
                {
                    gsp_GpioStt->fcnt[uc_i]++;      //计数器累加
                }
                else                                //低电平
                {
                    gsp_GpioStt->fcnt[uc_i] = 0;    //计数器清零
                }
            }
                                                    //按键事件
            if(gsp_GpioStt->fcnt[uc_i] >= FGPI_GATE)
            {                                       //下降沿事件
                gsp_GpioStt->fgpifevt |= gsp_GpioStt->fgpistt & (0x01 << uc_i);
                gsp_GpioStt->fgpistt ^= (0x01 << uc_i);//状态取反
                gsp_GpioStt->fgpirevt |= gsp_GpioStt->fgpistt & (0x01 << uc_i);//上升沿事件
                gsp_GpioStt->fcnt[uc_i] = 0;           //计数器清零
            }
        }
        else                                        //无去抖功能
        {
            if(HAL_GPIO_GetPinState(&gpi->cp->gpio[gpi->cp->pingrp], gpi->cp->pinnum))//高
            {
                gsp_GpioStt->fgpistt |= (0x01 << uc_i);
            }
            else                                    //低
            {
                gsp_GpioStt->fgpistt &= ~(0x01 << uc_i);
            }
        }
    }
    
	return true;
}

void SYS_GPI_Init(void)
{
#if ((SYS_LGPI_EN > 0) || (SYS_FGPI_EN > 0))
    GPI_PORTS* gpi;
    uint16 timeout;
    uint8 uc_i = 0;
#endif
                                            //申请缓存
    gsp_GpioStt = &__GpioStt;//(GPIO_IN*)m_malloc(sizeof(GPIO_IN));
    memset((uint8*)gsp_GpioStt, 0, sizeof(GPIO_IN));
    gsp_GpioStt->gpistt = 0xFFFFFFFF;       //慢速GPI端口初始状态
    gsp_GpioStt->fgpistt = 0xFFFFFFFF;      //快速GPI端口初始状态
    
#if (SYS_FGPI_EN > 0)
                                            //初始化为输入状态
    for(uc_i = 0; uc_i < FGPI_PORT_NUM; uc_i++)
    {
        gpi = (GPI_PORTS*)gs_FGPIPort + uc_i;
        _IF_TRUE_DO(gpi == __NULL, continue);
                                            //配置端口功能,并设为输入模式
//	        HAL_GPIO_PinConfig(gpi->cp->port, gpi->cp->pin, gpi->cp->mode);
//	        HAL_GPIO_SetPinDIR(gpi->cp->port, gpi->cp->pin, false);
        HAL_GPIO_PinConfig(&gpi->cp->gpio[gpi->cp->pingrp], gpi->cp->pinnum, gpi->cp->type, gpi->cp->analog, gpi->cp->dir);
        
    }
                                            //创建快速端口扫描定时器(10ms)
    timeout = SYS_TICK_PER_SEC / 100;
    timeout = (timeout < 1) ? 1 : timeout;
#ifndef __NO_SYS__     
    SYS_Timer_Create(SYS_FGPI_Scan, __NULL, timeout, ID_SWTIMER_FGPI, false);
#endif    
#endif
    
#if (SYS_LGPI_EN > 0)
//	    uint8_t interuptSwitch = 0;
                                            //初始化为输入状态
    for(uc_i = 0; uc_i < LGPI_PORT_NUM; uc_i++)
    {
        gpi = (GPI_PORTS*)gs_LGPIPort + uc_i;
        _IF_TRUE_DO(gpi == __NULL, continue);
                                            //配置端口功能,并设为输入模式
//	        HAL_GPIO_PinConfig(gpi->cp->port, gpi->cp->pin, gpi->cp->mode);
//	        HAL_GPIO_SetPinDIR(gpi->cp->port, gpi->cp->pin, false);
        HAL_GPIO_PinConfig(gpi->port);
//	        if(gpi->handleen)
//	        {
//	            HAL_GPIO_EInt_Cfg(gpi->handleno, &gpi->gpio[gpi->pingrp], gpi->pinnum, gpi->edge, SYS_LGPI_Scan, NULL);
//	        }

    }

//	    if(interuptSwitch) NVIC_EnableIRQ(GPIO_IRQn);
#ifndef __NO_SYS__        
                                            //创建慢速端口扫描定时器(100ms)
    timeout = SYS_TICK_PER_SEC / 10;
    timeout = (timeout < 1) ? 1 : timeout;
     
//    SYS_Timer_Create(SYS_LGPI_Scan, __NULL, timeout, ID_SWTIMER_LGPI, false);
//    krhino_timer_create(&timer_Fgpi, "timer_Fgpi", SYS_FGPI_Scan,
//                            10, 1, 0, 1);   
//	    krhino_timer_create(&timer_Lgpi, "timer_Lgpi", SYS_LGPI_Scan,
//	                            krhino_ms_to_ticks(10), krhino_ms_to_ticks(10), 0, 1);         
#endif
#endif
}
