==> captain58/embed_platform/drivers/stm32L476/src/dev_gpi.c <==
#define EXT_DEV_GPI
#include "aos/include.h"
#include "drv.h"
#include "gpio.h"
#include "tasks.h"

void SYS_LGPI_Scan(void *timer, void *arg)
{
    uint8   uc_i;
    gpio_dev_t* lp;
    uint32_t val = 0;
#if LGPI_KEY_NUM > 0
//	    uint8 tkid;
//	
//	    extern const KTaskDeclare __TKDeclare[SYS_TK_NUM];
//	    const KTaskDeclare* dec = __TKDeclare;
//	    
//	    for(tkid = 0; tkid < SYS_TK_NUM; tkid++)
//	    {
//	        if(guc_MsgApplied[tkid] & Bit_Map8[MSG_CLS_GPIO])
//	        {
//	            break;
//	        }
//	    }
//	    if(tkid >= SYS_TK_NUM)
//	        return;
    //按键输入口状态扫描(含去抖功能及按键保持判断)
    for(uc_i = 0; uc_i < LGPI_KEY_NUM; uc_i++)
    {
        lp = (brd_gpi_table + uc_i);
                                                //当前高电平.判断下降事件
//	        if(lp->pullup)
//	        {
//	            Chip_GPIO_SetPinState(lp->pingrp, lp->pinnum, true);
//	            sleep_ms(100);
//	        }
        hal_gpio_input_get(lp, &val);

        if(gsp_GpioStt->gpistt & (0x01 << uc_i))
        {
            //uint8 p = Chip_GPIO_GetMaskedPortValue(lp->port->pingrp);
 
            if(val == 0)//低
            //if(!((p >> lp->port->pinnum) & 1))
            {
                gsp_GpioStt->cnt[uc_i]++;       //计数器累加
            }
            else                                //清计数器
            {
                gsp_GpioStt->cnt[uc_i] = 0;
            }
            gsp_GpioStt->lastcnt[uc_i] = 0;     //高电平状态下按键保持计数器清零
        }
        else                                    //当前低电平
        {
            if(val == GPIO_PIN_SET)//高
            {
                gsp_GpioStt->cnt[uc_i]++;       //计数器累加
            }
            else                                //低电平
            {
                gsp_GpioStt->cnt[uc_i] = 0;     //计数器清零
                if(gsp_GpioStt->lastcnt[uc_i] <= SYS_LGPI_LAST)
                {
                    gsp_GpioStt->lastcnt[uc_i]++;   //低电平状态下按键保持计数器累加
                }
            }
        }
//	        if(lp->pullup)
//	        {
//	            Chip_GPIO_SetPinState(lp->pingrp, lp->pinnum, false);
//	        }
        
                                                //按键事件
        if(gsp_GpioStt->cnt[uc_i] >= SYS_LGPI_GATE)
        {
            CPSR_ALLOC();
            RHINO_CPU_INTRPT_DISABLE();        
            //下降沿事件
            gsp_GpioStt->keyfevt |= gsp_GpioStt->gpistt & (0x01 << uc_i);
            gsp_GpioStt->gpistt ^= (0x01 << uc_i);//状态取反
            gsp_GpioStt->keyrevt |= gsp_GpioStt->gpistt & (0x01 << uc_i);//上升沿事件
            RHINO_CPU_INTRPT_ENABLE();

            gsp_GpioStt->cnt[uc_i] = 0;         //计数器清零
            
        }
                                                //按键保持事件判断
        if(gsp_GpioStt->lastcnt[uc_i] == SYS_LGPI_LAST)
        {
//	            gsp_GpioStt->lastcnt[uc_i] = SYS_LGPI_LAST - SYS_LGPI_GATE;
            gsp_GpioStt->keylevt |= (0x01 << uc_i);
        }
    }
#endif
    
    //普通GPI输入端口扫描(无去抖功能)
//	    for(uc_i = LGPI_KEY_NUM; uc_i < LGPI_PORT_NUM; uc_i++)
//	    {
//	        lp = (GPI_PORTS*)(gs_LGPIPort + uc_i);
//	
//	        if(lp->pullup)
//	        {
//	            Chip_GPIO_SetPinState(lp->pingrp, lp->pinnum, true);
//	        }
//	        
//	        if(Chip_GPIO_GetPinState(lp->port->pingrp, lp->port->pinnum) == true)//高电平
//	        {
//	            gsp_GpioStt->gpistt |= (0x01 << uc_i);
//	        }
//	        else                                    //低电平
//	        {
//	            gsp_GpioStt->gpistt &= ~(0x01 << uc_i);
//	        }
//	
//	        if(lp->pullup)
//	        {
//	            Chip_GPIO_SetPinState(lp->pingrp, lp->pinnum, false);
//	        }
//	    }
    
    //return true;
}

void SYS_FGPI_Scan(void *timer, void *arg)

{
    uint8   uc_i;
    GPI_PORTS* lp;
    
    for(uc_i = 0; uc_i < FGPI_PORT_NUM; uc_i++)
    {
        lp = (GPI_PORTS*)(gs_FGPIPort + uc_i);
        
        if(lp->pullup)
        {
            Chip_GPIO_SetPinState(lp->pingrp, lp->pinnum, true);
        }
                                                //当前高电平.判断下降事件
        if(gsp_GpioStt->fgpistt & (0x01 << uc_i))
        {
            if(Chip_GPIO_GetPinState(lp->port->pingrp, lp->port->pinnum) == false)//低
            {
                gsp_GpioStt->fcnt[uc_i]++;      //计数器累加
            }
            else                                //清计数器
            {
                gsp_GpioStt->fcnt[uc_i] = 0;
            }
        }
        else                                    //当前低电平
        {
            if(Chip_GPIO_GetPinState(lp->port->pingrp, lp->port->pinnum) == true)//高
            {
                gsp_GpioStt->fcnt[uc_i]++;      //计数器累加
            }
            else                                //低电平
            {
                gsp_GpioStt->fcnt[uc_i] = 0;    //计数器清零
            }
        }
        if(lp->pullup)
        {
            Chip_GPIO_SetPinState(lp->pingrp, lp->pinnum, false);
        }
        
                                                //按键事件
        if(gsp_GpioStt->fcnt[uc_i] >= SYS_FGPI_GATE)
        {                                       //下降沿事件
            gsp_GpioStt->fgpifevt |= gsp_GpioStt->fgpistt & (0x01 << uc_i);
            gsp_GpioStt->fgpistt ^= (0x01 << uc_i);//状态取反
            gsp_GpioStt->fgpirevt |= gsp_GpioStt->fgpistt & (0x01 << uc_i);//上升沿事件
            gsp_GpioStt->fcnt[uc_i] = 0;           //计数器清零
        }
    }
}

void SYS_GPI_Init(void)
{
#if ((SYS_LGPI_EN > 0) || (SYS_FGPI_EN > 0))
    gpio_dev_t* lp;
#endif
    uint8 uc_i = 0;
    uint32_t val = 0;

                                            //申请缓存
    gsp_GpioStt = &sGpio;
    ClearBuffer((uint8*)gsp_GpioStt, sizeof(GPIO));
    memset(&gsp_GpioStt->gpistt, 0xFF, sizeof(gsp_GpioStt->gpistt));//慢速GPI端口初始状态
    memset(&gsp_GpioStt->fgpistt, 0xFF, sizeof(gsp_GpioStt->fgpistt));//快速GPI端口初始状态
//	    gsp_GpioStt->gpistt = 0xFFFFFFFF;       //慢速GPI端口初始状态
//	    gsp_GpioStt->fgpistt = 0xFFFFFFFF;      //快速GPI端口初始状态
    
#if (SYS_FGPI_EN > 0)
                                            //初始化为输入状态
    for(uint8 uc_i = 0; uc_i < FGPI_PORT_NUM; uc_i++)
    {
        lp = (GPI_PORTS*)(gs_FGPIPort + uc_i);
                                            //配置端口功能,并设为输入模式
                                                                                
        Chip_GPIO_SetPinDigit(lp->port->pingrp, lp->port->pinnum);
        
        Chip_GPIO_SetPinPFSEG(lp->port->pingrp, lp->port->pinnum, lp->port->pinseg);
        Chip_GPIO_SetPinOutputMode(lp->port->pingrp, lp->port->pinnum, lp->port->modefunc & 0x01);
        
        Chip_GPIO_SetPinDIRInput(lp->port->gpio, lp->port->pingrp, lp->port->pinnum);
    }
                                            //创建快速端口扫描定时器
//	    SYS_Timer_Create(SYS_FGPI_Scan, __NULL, 1, TIMER_ID_FGPI, false);
//	    krhino_timer_create(&timer_Fgpi, "timer_Fgpi", SYS_FGPI_Scan,
//	                            10, 1, 0, 1);                                            
#endif
    
#if (SYS_LGPI_EN > 0)
                                            //初始化为输入状态
//	    for(uint8 uc_i = 0; uc_i < GPI_NUM; uc_i++)
//	    {
//	        lp = (brd_gpi_table + uc_i);
//	                                            //配置端口功能,并设为输入模式
//	        Chip_GPIO_SetPinDigit(lp->port->pingrp, lp->port->pinnum);
//	        
//	        Chip_GPIO_SetPinPFSEG(lp->port->pingrp, lp->port->pinnum, lp->port->pinseg);
//	        Chip_GPIO_SetPinOutputMode(lp->port->pingrp, lp->port->pinnum, lp->port->modefunc & 0x01);
//	
//	        Chip_GPIO_SetPinDIRInput(lp->port->pingrp, lp->port->pinnum);
//	    }
                                            //创建慢速端口扫描定时器
//	    SYS_Timer_Create(SYS_LGPI_Scan, __NULL, 10, TIMER_ID_LGPI, false);
//	    krhino_timer_create(&timer_Lgpi, "timer_Lgpi", SYS_LGPI_Scan,
//	                            2, 2, 0, 1);                                            
#if LGPI_KEY_NUM > 0
    //按键输入口状态扫描(含去抖功能及按键保持判断)
//	    for(uc_i = 0; uc_i < LGPI_KEY_NUM; uc_i++)
//	    {
//	        lp = (brd_gpi_table + uc_i);
//	                                                //当前高电平.判断下降事件
//	//	        if(lp->pullup)
//	//	        {
//	//	            Chip_GPIO_SetPinState(lp->pingrp, lp->pinnum, true);
//	//	            sleep_ms(100);
//	//	        }
//	        hal_gpio_input_get(lp, &val);
//	        if(val == GPIO_PIN_RESET)//低
//	        {
//	            gsp_GpioStt->gpistt ^= (0x01 << uc_i);//状态取反
//	        }
//	
//	    }
#endif

#endif

#if (SYS_INT_EN > 0)
//	    for(uint8 uc_i = 0; uc_i < NO_OF_INTERRUPT; uc_i++)
//	    {
//	        if(gss_IntSID[uc_i]->mode == 0)
//	        {
//	            Init_Intx(gss_IntSID[uc_i], (timer_cb_t __far *)SYS_LGPI_Scan);
//	        }
//	        else if(gss_IntSID[uc_i]->mode == 1)
//	        {
//	            Init_Intx(gss_IntSID[uc_i], (timer_cb_t __far *)SYS_HALL_cb);
//	        }
//	    }
#endif    

}
